--- a/Law Project/index.html
+++ b/Law Project/index.html
@@ -15,8 +15,8 @@
       It was made with plain HTML/CSS and deployed on Vercel.
     </p>
     <p>
-      GitHub: <a href="https://github.com/USERNAME/REPO" target="_blank">
-        github.com/USERNAME/REPO
+      GitHub: <a href="https://github.com/VacNation/Law-Project-" target="_blank">
+        github.com/VacNation/Law-Project-
       </a>
     </p>
     <p>
@@ -27,3 +27,4 @@
   </main>
 </body>
 </html>
+
