--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
       It was made with plain HTML/CSS and deployed on Vercel.
     </p>
     <p>
-      GitHub: <a href="https://github.com/USERNAME/REPO" target="_blank">
-        github.com/USERNAME/REPO
+      GitHub: <a href="https://github.com/VacNation/Law-Project-" target="_blank">
+        github.com/VacNation/Law-Project-
       </a>
     </p>
     <p>
-      Deployed: <a href="https://your-site.vercel.app" target="_blank">
-        your-site.vercel.app
+      Deployed: <a href="https://law-project-dusky.vercel.app" target="_blank">
+        law-project-dusky.vercel.app
       </a>
     </p>
   </main>
 </body>
 </html>
+
